--- a/SimpleUI/project.properties
+++ b/SimpleUI/project.properties
@@ -16,4 +16,4 @@ sdk.dir=c:/Users/Spobo/Documents/My Dropbox/Android SDK
 android.library=true
 # Project target.
 target=android-15
-android.library.reference.1=../../Documents/My Dropbox/Android SDK/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.1=../../../Documents/My Dropbox/Android SDK/extras/google/google_play_services/libproject/google-play-services_lib
