--- a/SimpleUI/AndroidManifest.xml
+++ b/SimpleUI/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:icon="@drawable/icon"
-        android:label="@string/app_name" >
+        android:label="SimpleUI" >
         <activity
             android:name="v1.V1SimpleUI"
             android:theme="@android:style/Theme.Translucent" >
