--- a/SimpleUI/.classpath
+++ b/SimpleUI/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="libs/google-play-services.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="libs/libGoogleAnalyticsServices.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/otto-1.3.4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
