--- a/SimpleUI/.classpath
+++ b/SimpleUI/.classpath
@@ -4,9 +4,12 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="libs/google-play-services.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/google-play-services.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="libs/libGoogleAnalyticsServices.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/libGoogleAnalyticsServices.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/otto-1.3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/volley.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/picasso-2.0.2.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
