--- a/SimpleUI/.classpath
+++ b/SimpleUI/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="src" path="srcJava"/>
 	<classpathentry kind="src" path="srcModifiers"/>
+	<classpathentry kind="src" path="srcOtherAddons"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="libs/google-play-services.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
