--- a/UiTemplate/.classpath
+++ b/UiTemplate/.classpath
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="srcModifiers"/>
+	<classpathentry kind="src" path="srcSimpleUiJava"/>
+	<classpathentry kind="src" path="srcSimpleUiAndroid"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="libs/jsr311-api-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
