--- a/UiTemplate/.project
+++ b/UiTemplate/.project
@@ -30,4 +30,21 @@
 		<nature>com.android.ide.eclipse.adt.AndroidNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>srcModifiers</name>
+			<type>2</type>
+			<locationURI>WORKSPACE_LOC/SimpleUi/SimpleUI/srcModifiers</locationURI>
+		</link>
+		<link>
+			<name>srcSimpleUiAndroid</name>
+			<type>2</type>
+			<locationURI>WORKSPACE_LOC/SimpleUi/SimpleUI/src</locationURI>
+		</link>
+		<link>
+			<name>srcSimpleUiJava</name>
+			<type>2</type>
+			<locationURI>WORKSPACE_LOC/SimpleUi/SimpleUI/srcJava</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
