--- a/SimpleUI/.classpath
+++ b/SimpleUI/.classpath
@@ -2,23 +2,23 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="src" path="srcJava"/>
 	<classpathentry kind="src" path="srcModifiers"/>
 	<classpathentry kind="src" path="srcOtherAddons"/>
+	<classpathentry kind="src" path="srcJava"/>
+	<classpathentry kind="src" path="srcJavaEE"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="lib" path="libs/google-play-services.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/google-play-services.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="libs/libGoogleAnalyticsServices.jar"/>
-	<classpathentry kind="lib" path="libs/otto-1.3.4.jar"/>
-	<classpathentry kind="lib" path="libs/volley.jar"/>
-	<classpathentry kind="lib" path="libs/picasso-2.0.2.jar"/>
-	<classpathentry kind="lib" path="libs/butterknife-3.0.1.jar"/>
-	<classpathentry kind="lib" path="libs/dagger-1.1.0.jar"/>
-	<classpathentry kind="lib" path="libs/javax.inject.jar"/>
-	<classpathentry kind="lib" path="libs/dagger-compiler-1.1.0.jar"/>
-	<classpathentry kind="lib" path="libs/javawriter-2.2.1.jar"/>
-	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/libGoogleAnalyticsServices.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/otto-1.3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/volley.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/picasso-2.0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/butterknife-3.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/dagger-1.1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/javax.inject.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/dagger-compiler-1.1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/javawriter-2.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="libs/jsr311-api-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
