--- a/SimpleUI/.classpath
+++ b/SimpleUI/.classpath
@@ -7,8 +7,9 @@
 	<classpathentry kind="src" path="srcJava"/>
 	<classpathentry kind="src" path="srcJavaEE"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry exported="true" kind="lib" path="libs/google-play-services.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry exported="true" kind="lib" path="libs/google-play-services.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/libGoogleAnalyticsServices.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/otto-1.3.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/volley.jar"/>
@@ -19,6 +20,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/dagger-compiler-1.1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/javawriter-2.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry exported="true" kind="lib" path="libs/jsr311-api-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/json-20090211.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
