--- a/SimpleUI/.classpath
+++ b/SimpleUI/.classpath
@@ -21,6 +21,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/javawriter-2.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jsr311-api-1.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/json-20090211.jar"/>
+	<classpathentry kind="lib" path="libs/gson-2.2.4.jar"/>
+	<classpathentry kind="lib" path="libs/json-20140107.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
