--- a/SimpleUiExamples/.classpath
+++ b/SimpleUiExamples/.classpath
@@ -10,5 +10,11 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="/SimpleUI/libsMore/dagger-1.1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="/SimpleUI/libsMore/dagger-compiler-1.1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="/SimpleUI/libsMore/javax.inject.jar"/>
+	<classpathentry exported="true" kind="lib" path="/SimpleUI/libsMore/butterknife-3.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="/SimpleUI/libsMore/libGoogleAnalyticsServices.jar"/>
+	<classpathentry exported="true" kind="lib" path="/SimpleUI/libsMore/gson-2.2.4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
