--- a/SimpleUiExamples/AndroidManifest.xml
+++ b/SimpleUiExamples/AndroidManifest.xml
@@ -30,6 +30,10 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <activity
+            android:name="v2.simpleUi.SimpleUI"
+            android:theme="@style/LTheme" >
+        </activity>
+        <activity
             android:name=".JsonDemoMain"
             android:label="@string/app_name" >
         </activity>
@@ -46,13 +50,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity android:name="injectionTests.ButterknifeAndDaggerTestActivity" >
-        </activity>
-        
-        <activity
-            android:name="v2.simpleUi.SimpleUI"
-            android:theme="@android:style/Theme.Translucent" >
         </activity>
 
         <service android:name="tools.KeepProcessAliveService" >
