--- a/SimpleUI/.classpath
+++ b/SimpleUI/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry kind="src" path="srcJava"/>
 	<classpathentry kind="src" path="srcJavaEE"/>
 	<classpathentry kind="src" path="srcAddons"/>
+	<classpathentry kind="src" path="srcMaterialUi"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
