classpath and manifest cleanup

--- a/SimpleUI/AndroidManifest.xml
+++ b/SimpleUI/AndroidManifest.xml
@@ -12,9 +12,20 @@
 
         <!-- Activty templates to copy to you app manifest file -->
 
+        <!-- Simple UI -->
+        <activity android:name="v2.simpleUi.SimpleUI" android:theme="@style/LTheme"/>
+        
         <activity
-            android:name="v2.simpleUi.SimpleUI"
-            android:theme="@style/LTheme" />
+            android:name="tools.ErrorHandler"
+            android:process=":myexeptionprocess"
+            android:taskAffinity="tools.ErrorHandler" >
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.intent.action.VIEW" />
+                <data android:mimeType="errors/myUnhandleCatcher" />
+            </intent-filter>
+        </activity>
+        
     </application>
 
 </manifest>
