--- a/SimpleUI/.classpath
+++ b/SimpleUI/.classpath
@@ -10,7 +10,7 @@
 	<classpathentry kind="src" path="srcMaterialUi"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="libsMore/acra-4.5.0.jar"/>
 	<classpathentry kind="lib" path="libsMore/butterknife-3.0.1.jar"/>
 	<classpathentry kind="lib" path="libsMore/dagger-1.1.0.jar"/>
