--- a/SimpleUiExamples/AndroidManifest.xml
+++ b/SimpleUiExamples/AndroidManifest.xml
@@ -29,10 +29,7 @@
         android:name="tools.SimpleUiApplication"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
-        <activity
-            android:name="v2.simpleUi.SimpleUI"
-            android:theme="@style/LTheme" >
-        </activity>
+        <activity android:name="v2.simpleUi.SimpleUI" android:theme="@style/LTheme"/>
         <activity
             android:name=".JsonDemoMain"
             android:label="@string/app_name" >
