--- a/SimpleUI/.classpath
+++ b/SimpleUI/.classpath
@@ -10,7 +10,7 @@
 	<classpathentry kind="src" path="srcMaterialUi"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="libsMore/acra-4.5.0.jar"/>
 	<classpathentry kind="lib" path="libsMore/butterknife-3.0.1.jar"/>
 	<classpathentry kind="lib" path="libsMore/dagger-1.1.0.jar"/>
@@ -22,9 +22,11 @@
 	<classpathentry kind="lib" path="libsMore/json-20140107.jar"/>
 	<classpathentry kind="lib" path="libsMore/jsr311-api-1.1.1.jar"/>
 	<classpathentry kind="lib" path="libsMore/libGoogleAnalyticsServices.jar"/>
-	<classpathentry kind="lib" path="libsMore/otto-1.3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libsMore/otto-1.3.4.jar"/>
 	<classpathentry kind="lib" path="libsMore/retrofit-1.4.1.jar"/>
 	<classpathentry kind="lib" path="libsMore/volley.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry kind="lib" path="/appcompat_v7/libs/android-support-v4.jar"/>
+	<classpathentry kind="lib" path="/appcompat_v7/libs/android-support-v7-appcompat.jar"/>
+	<classpathentry kind="lib" path="/appcompat_v7_cardview/libs/android-support-v7-cardview.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
