--- a/SimpleUI/.classpath
+++ b/SimpleUI/.classpath
@@ -29,5 +29,6 @@
 	<classpathentry kind="lib" path="/appcompat_v7/libs/android-support-v7-appcompat.jar"/>
 	<classpathentry kind="lib" path="/appcompat_v7_cardview/libs/android-support-v7-cardview.jar"/>
 	<classpathentry exported="true" kind="lib" path="libsMore/FreeFlow.jar"/>
+	<classpathentry kind="lib" path="libsMore/nineoldandroids-2.4.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
