--- a/SimpleUI/.classpath
+++ b/SimpleUI/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="srcAndroid"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="src" path="srcModifiers"/>
 	<classpathentry kind="src" path="srcOtherAddons"/>
