--- a/SimpleUiExamples/AndroidManifest.xml
+++ b/SimpleUiExamples/AndroidManifest.xml
@@ -29,16 +29,8 @@
         android:name="tools.SimpleUiApplication"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
-        <activity android:name="v2.simpleUi.SimpleUI" android:theme="@style/LTheme"/>
-        <activity
-            android:name=".JsonDemoMain"
-            android:label="@string/app_name" >
-        </activity>
-        <activity android:name="V2ExampleUI" >
-        </activity>
-        <activity android:name="v1.V1SimpleUI" >
-        </activity>
-        <activity android:name="ExampleSurveyActivity" >
+        <activity android:name="simpleui.SimpleUI" android:theme="@style/LTheme"/>
+        <activity android:name="simpleui.examples.ExampleSurveyActivity" >
         </activity>
         <activity android:name="MainActivity" >
             <intent-filter>
@@ -47,10 +39,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="injectionTests.ExampleButterknifeAndDaggerActivity" >
+        <activity android:name="simpleui.examples.injection.ExampleButterknifeAndDaggerActivity" >
         </activity>
 
-        <service android:name="tools.KeepProcessAliveService" >
+        <service android:name="simpleui.util.KeepProcessAliveService" >
         </service>
 
         <!-- get your key at https://code.google.com/apis/console -->
@@ -58,10 +50,10 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyDbGG1cxZT9ObkA91z0MMvVHjtxQVX2rvY" />
 
-        <activity android:name="com.googlecode.simpleui.ExampleMapActivity" >
+        <activity android:name="simpleui.examples.maps.ExampleMapActivity" >
         </activity>
         <activity
-            android:name="tools.ErrorHandler"
+            android:name="simpleui.util.ErrorHandler"
             android:process=":myexeptionprocess"
             android:taskAffinity="tools.ErrorHandler" >
             <intent-filter>
