--- a/SimpleUiExamples/AndroidManifest.xml
+++ b/SimpleUiExamples/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <activity android:name="simpleui.SimpleUI" android:theme="@style/LTheme"/>
-        <activity android:name="simpleui.examples.ExampleSurveyActivity" >
+        <activity android:name="simpleui.examples.activities.ExampleSurveyActivity" >
         </activity>
         <activity android:name="MainActivity" >
             <intent-filter>
