--- a/SimpleUiExamples/AndroidManifest.xml
+++ b/SimpleUiExamples/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:required="true" />
 
     <application
-        android:name="tools.SimpleUiApplication"
+        android:name="simpleui.util.SimpleUiApplication"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <activity android:name="simpleui.SimpleUI" android:theme="@style/LTheme"/>
