--- a/SimpleUI/.classpath
+++ b/SimpleUI/.classpath
@@ -26,7 +26,9 @@
 	<classpathentry kind="lib" path="libsMore/volley.jar"/>
 	<classpathentry exported="true" kind="lib" path="libsMore/FreeFlow.jar"/>
 	<classpathentry exported="true" kind="lib" path="libsMore/nineoldandroids-2.4.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/google-play-services.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/picasso-2.0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/play-services-maps-6.5.87.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/play-services-base-6.5.87.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/play-services-location-6.5.87.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
