--- a/SimpleUI/AndroidManifest.xml
+++ b/SimpleUI/AndroidManifest.xml
@@ -26,6 +26,8 @@
             </intent-filter>
         </activity>
         
+        <meta-data android:name="com.google.android.gms.version" android:value="6587000" />
+        
     </application>
 
 </manifest>
