--- a/appcompat_v7/.classpath
+++ b/appcompat_v7/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="lib" path="libsNeeded/android-support-v4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libsNeeded/android-support-v7-appcompat.jar"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
